# timetest

./: .gitignore  README.md
Arduino/: timestest.ino  timestest.vcxproj  timestest.vcxproj.filters
RaspberryPi/: CMakeLists.txt  main.cpp
